# graphengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  README_CN.md  RELEASE.md  Third_Party_Open_Source_Software_Notice  build.sh
910/base/slice/: CMakeLists.txt  data_slice_factory.h  data_slice_helper.h
base/: CMakeLists.txt
base/common/: data_dependent_interpreter.cc  file_constant_util.cc  file_constant_util.h  fp16_t.h  ge_inner_attrs.cc  omg_util.h  proto_util.cc  single_op_parser.cc  single_op_parser.h  thread_pool.cc  thread_pool.h  types.cc
base/common/context/: local_context.cc  local_context.h  ome_context.h
base/common/debug/: memory_dumper.cc
base/common/dump/: dump_manager.cc  dump_op.cc  dump_op.h  dump_properties.cc  dump_properties.h  exception_dumper.cc  exception_dumper.h
base/common/helper/: file_saver.cc  model_helper.cc  model_parser_base.cc  om_file_helper.cc
base/common/model/: ge_model.h  ge_root_model.cc  ge_root_model.h  model_relation.cc  model_relation.h
base/common/op/: transop_util.cc
base/common/op_so_store/: op_so_store.cc
base/common/overflow/: overflow_manager.h
base/common/plugin/: datatype_util.cc  ge_util.h  op_tiling_manager.cc  op_tiling_manager.h  opp_so_manager.cc  opp_so_manager.h
base/common/profiling/: profiling_definitions.cc  profiling_properties.h
base/common/tbe_handle_store/: bin_register_utils.cc  bin_register_utils.h  kernel_store.cc  kernel_store.h  tbe_handle_store.cc  tbe_kernel_store.h
base/exec_runtime/: execution_runtime.cc  execution_runtime.h  runtime_tensor_desc.h
base/formats/: CMakeLists.txt  formats.h  ge_format_util.cc  register_format_transfer.cc
base/formats/utils/: formats_trans_utils.h  (+1 more)
base/slice/: data_slice_adapter.cc  data_slice_default_impl.cc  data_slice_default_impl.h  data_slice_elementwise_impl.cc  data_slice_factory.cc  data_slice_helper.cc  data_slice_toolkit.h
ge/: CMakeLists.txt  ge_inference.mk  ge_runner.mk
ge/analyzer/: analyzer.cc  analyzer.h
ge/client/: CMakeLists.txt  ge_api.cc  ge_prof.cc  module.mk
ge/common/: CMakeLists.txt  base64.h  bcast.h  cust_aicpu_kernel_store.cc  cust_aicpu_kernel_store.h  fmk_error_codes.cc  fp16_t.cc  fp16_t.h  ge_call_wrapper.h  ge_common.mk  ge_format_util.cc  ge_opt_info.cc  ge_opt_info.h  kernel_store.cc  kernel_store.h  local_context.h  math_util.h  model_saver.cc  omg_util.h  properties_manager.cc  properties_manager.h  singleton.h  tbe_kernel_store.cc  tbe_kernel_store.h  thread_pool.cc  thread_pool.h  types.cc  util.cc
ge/engine_manager/: dnnengine_manager.cc  dnnengine_manager.h  engine_conf.json
ge/executor/: CMakeLists.txt  ge_executor.cc  module.mk
ge/ge_local_engine/: CMakeLists.txt  module.mk
ge/ge_opt_info/: ge_opt_info.cc  ge_opt_info.h
ge/ge_runtime/: CMakeLists.txt  model_context.h  model_runner.cc  output.cc  output.h  runtime_model.cc  runtime_model.h
ge/generator/: ge_generator.cc  generator_api.cc
ge/host_cpu_engine/: CMakeLists.txt  module.mk
ge/host_kernels/: add_kernel.cc  broadcast_args_kernel.cc  broadcast_args_kernel.h  broadcast_gradient_args_kernel.cc  broadcast_gradient_args_kernel.h  cast_kernel.cc  concat_offset_kernel.cc  concat_offset_kernel.h  concat_v2_kernel.cc  concat_v2_kernel.h  dynamic_stitch_kernel.cc  empty_kernel.cc  empty_kernel.h  expanddims_kernel.cc  expanddims_kernel.h  fill_kernel.cc  floordiv_kernel.cc  floordiv_kernel.h  floormod_kernel.cc  floormod_kernel.h  gather_v2_kernel.cc  greater_kernel.cc  greater_kernel.h  identity_kernel.cc  identity_kernel.h  kernel_utils.cc  kernel_utils.h  maximum_kernel.cc  mul_kernel.cc  pack_kernel.cc  pack_kernel.h  permute_kernel.cc  permute_kernel.h  range_kernel.cc  rank_kernel.cc  rank_kernel.h  reduce_prod_kernel.cc  reformat_kernel.cc  reformat_kernel.h  reshape_kernel.cc  (+24 more)
ge/hybrid/: hybrid_davinci_model.cc  hybrid_davinci_model.h  hybrid_davinci_model_stub.cc
ge/inc/: graph_pass.h  kernel.h
ge/init/: gelib.cc  gelib.h
ge/ir_build/: atc_ir_common.cc  atc_ir_common.h  ge_ir_build.cc  option_utils.cc  option_utils.h
ge/model/: ge_model.cc  ge_model.h  ge_root_model.cc  ge_root_model.h
ge/offline/: CMakeLists.txt  atc  keep_dtype_option.cc  keep_dtype_option.h  main.cc  module.mk  single_op_parser.cc  single_op_parser.h
ge/omm/: csa_interact.cc  csa_interact.h
ge/opskernel_manager/: ops_kernel_builder_manager.cc  ops_kernel_builder_manager.h  ops_kernel_manager.cc  ops_kernel_manager.h  optimizer_priority.pbtxt
ge/proto/: dump_task.proto  fwk_adapter.proto  ge_api.proto  ge_ir.proto  insert_op.proto  om.proto  op_mapping_info.proto  task.proto
ge/session/: inner_session.cc  inner_session.h  omg.cc  session_manager.cc  session_manager.h
ge/single_op/: single_op.cc  single_op.h  single_op_manager.cc  single_op_manager.h  single_op_model.cc  single_op_model.h  stream_resource.cc  stream_resource.h
ge/stub/: Makefile  gen_stubapi.py
metadef/: CMakeLists.txt  NOTICE  OWNERS  build.sh
metadef/cmake/: FindModule.cmake  intf_pub_linux.cmake
metadef/graph/: CMakeLists.txt  anchor.cc  ascend_string.cc  attr_value.cc  buffer.cc  compute_graph.cc  format_refiner.cc  format_refiner.h  ge_attr_define.cc  ge_attr_value.cc  ge_tensor.cc  gnode.cc  graph.cc  graph.mk  inference_context.cc  model.cc  model_serialize.cc  module.mk  node.cc  op_desc.cc  operator.cc  operator_factory.cc  operator_factory_impl.cc  ref_relation.cc  runtime_inference_context.cc  shape_refiner.cc  tensor.cc
metadef/ops/: op_imp.cpp
metadef/proto/: optimizer_priority.proto
metadef/register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  host_cpu_context.cc  infer_data_slice_registry.cc  module.mk  op_kernel_registry.cpp  op_tiling.cpp  op_tiling_registry.cpp  ops_kernel_builder_registry.cc  register.cpp  register_format_transfer.cc  tensor_assign.cpp
src/ge/: CMakeLists.txt  ge_inference.mk  ge_runner.mk  ge_train.mk
src/proto/: CMakeLists.txt  fusion_model.proto  fwk_adapter.proto  ge_ir.proto  insert_op.proto  op_mapping_info.proto  task.proto
tests/st/: CMakeLists.txt  test_ge_st.py
(+3202 files in other folders)
